# starky_bls12_381

./: Cargo.toml
benches/: g2_add_isolation_benchmark.rs  g2_add_without_generator_benchmark.rs  g2_aggregation_benchmark.rs
src/: aggregate_proof.rs  g1_plonky2.rs  g2_plonky2.rs  lib.rs  main.rs  native.rs  signature_verification.rs  utils.rs  verify_proofs.rs
