[package]
name = "starky_bls12_381"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "miller_loop"
path = "bin/miller_loop.rs"

[[bin]]
name = "final_exponentiate"
path = "bin/final_exponentiate.rs"

[[bin]]
name = "fp12_mul"
path = "bin/fp12_mul.rs"

[[bin]]
name = "dimo_run"
path = "bin/dimo_run.rs"

# [[bin]]
# name = "wrapper"
# path = "bin/wrapper.rs"

[dependencies]
plonky2 = { git = "https://github.com/metacraft-labs/plonky2" }
starky = { git = "https://github.com/metacraft-labs/plonky2" }
plonky2_crypto = { git = "https://github.com/metacraft-labs/plonky2-crypto" }
anyhow = "1.0.40"
hex = "0.4"
to-binary = "0.4.0"
num-bigint = "0.4.4"
itertools = "0.10.3"
env_logger = { version = "0.9.0", default-features = false }
log = { version = "0.4.14", default-features = false }
plonky2-circuit-serializer = { git = "https://github.com/metacraft-labs/plonky2-circuit-serializer" }
serde_json = "1.0.114"
snowbridge-milagro-bls = "1.5.4"
eth-types = { git = "https://github.com/aurora-is-near/rainbow-bridge" }
tree_hash = "0.5"
tree_hash_derive = "0.5"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
ark-ec = "0.4.2"

[profile.test]
opt-level = 3

[patch]
[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1.git" }
